fixed assets path

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/assets/images/favicon-32x32.png" type="image/png" />
+    <link
+      rel="icon"
+      href="./assets/images/favicon-32x32.png"
+      type="image/png"
+    />
     <title>Frontend Mentor | Recipe page</title>
 
     <!-- Font Family -->
@@ -25,7 +29,7 @@
     <main class="container">
       <figure class="hero">
         <img
-          src="/assets/images/image-omelette.jpeg"
+          src="./assets/images/image-omelette.jpeg"
           alt="Declicious omelette"
         />
       </figure>
