--- a/index.html
+++ b/index.html
@@ -124,22 +124,22 @@
 
             <tbody>
               <tr>
-                <th scrope="row">Calories</th>
+                <th scope="row">Calories</th>
                 <td>277kcal</td>
               </tr>
 
               <tr>
-                <th scrope="row">Carbs</th>
+                <th scope="row">Carbs</th>
                 <td>0g</td>
               </tr>
 
               <tr>
-                <th scrope="row">Protein</th>
+                <th scope="row">Protein</th>
                 <td>20g</td>
               </tr>
 
               <tr>
-                <th scrope="row">Fat</th>
+                <th scope="row">Fat</th>
                 <td>22g</td>
               </tr>
             </tbody>
